rp_1/project/old/mlfo/service-mlfo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlfo-service
  namespace: desire6g
  labels:
    app: mlfo
spec:
  selector:
    app: mlfo
  ports:
    - name: api-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
